crates/lang/tests/ui/contract/fail/constructor-const.stderr
error: ink! constructors must not be const
  --> tests/ui/contract/fail/constructor-const.rs:10:13
   |
10 |         pub const fn constructor() -> Self {
   |             ^^^^^
